Fixed a mobile alignment problem with the nav bar

--- a/css/main_mobile.css
+++ b/css/main_mobile.css
@@ -211,6 +211,10 @@
         background-color: black;
     }
 
+    #header li {
+        margin:0 auto;
+    }
+
     /*
 
         Portfolio Content
